# zigx

./: README.md  pyproject.toml
.github/workflows/: deploy.yml  publish.yml
docs/: index.md
zigx/: __init__.py  __main__.py  build.py
zigx/src/commands/: new.zig
